--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
             transition: opacity 0.9s ease-in-out;
         }
 
-        /* New Styles */
         .progress-bar {
             position: absolute;
             top: 0;
@@ -146,6 +145,19 @@
             display: none;
             z-index: 12;
         }
+
+        .refresh-btn {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 10px;
+            background: rgba(255, 255, 255, 0.2);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            z-index: 13;
+        }
     </style>
 </head>
 <body>
@@ -162,6 +174,7 @@
     </div>
     
     <div class="title" id="title" onclick="showFullTitle()">Loading...</div>
+    <button class="refresh-btn" onclick="refreshReels()">⟳</button>
 
     <script>
         let fullTitle = "";
@@ -172,6 +185,7 @@
         let currentIndex = 0;
         let viewedReels = [];
         let touchStartY = 0;
+        let loadedVideos = new Map(); // Store loaded video elements
 
         const urlParams = new URLSearchParams(window.location.search);
         const initialReelId = urlParams.get('reelId') || null;
@@ -221,14 +235,12 @@
         function getRandomReel(excludeIndex) {
             let availableReels = allReels.filter((_, idx) => !viewedReels.includes(idx) && idx !== excludeIndex);
             if (availableReels.length === 0) {
-                viewedReels = [];
-                availableReels = allReels.filter((_, idx) => idx !== excludeIndex);
+                return -1; // Indicate end of reels
             }
             const randomIdx = Math.floor(Math.random() * availableReels.length);
             return allReels.indexOf(availableReels[randomIdx]);
         }
 
-        // Improvement 1: Better Error Handling
         async function fetchWithErrorHandling(url, fallback) {
             try {
                 const response = await fetch(url);
@@ -271,6 +283,11 @@
             }
 
             async function createVideoElement(reel, index, isPreload = false) {
+                // Check if video is already loaded
+                if (loadedVideos.has(index)) {
+                    return loadedVideos.get(index);
+                }
+
                 const div = document.createElement('div');
                 div.className = 'video-container';
 
@@ -278,7 +295,7 @@
                 video.playsInline = true;
                 video.controls = false;
                 video.muted = !isAudioEnabled;
-                video.loop = !isPreload;
+                video.loop = false; // Changed to false to stop at end
                 video.dataset.index = index;
                 video.dataset.title = reel.title;
 
@@ -290,12 +307,10 @@
                 loader.style.display = 'block';
                 div.appendChild(loader);
 
-                // Improvement 2: Progress Bar
                 const progressBar = document.createElement('div');
                 progressBar.className = 'progress-bar';
                 div.appendChild(progressBar);
 
-                // Improvement 1: Error Message Container
                 const errorMessage = document.createElement('div');
                 errorMessage.className = 'error-message';
                 div.appendChild(errorMessage);
@@ -303,12 +318,11 @@
                 video.addEventListener('canplay', () => {
                     loader.style.display = 'none';
                     if (!isPreload) {
-                        video.play().catch(error => showError('Playback failed', div));
+                        video.play().catch(() => {}); // Silent fail, no error message unless needed
                         updateMetadata(reel);
                     }
                 });
 
-                // Progress Bar Update
                 video.addEventListener('timeupdate', () => {
                     if (!isPreload && !video.paused) {
                         const progress = (video.currentTime / video.duration) * 100;
@@ -326,7 +340,7 @@
                         isAudioEnabled = true;
                         setAudioPersistence();
                         document.querySelectorAll('video').forEach(v => v.muted = false);
-                        video.play().catch(error => showError('Playback failed', div));
+                        video.play().catch(() => {});
                     }
                 });
 
@@ -335,6 +349,7 @@
                 });
 
                 div.appendChild(video);
+                loadedVideos.set(index, div); // Cache the loaded video
                 return div;
             }
 
@@ -349,25 +364,29 @@
                 verifyBadge.style.display = profileData.verified ? "inline" : "none";
             }
 
-            // Improvement 5: Preloading
             async function loadCurrentReel() {
                 container.innerHTML = '';
+                if (currentIndex === -1) {
+                    container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">All reels viewed. Refresh to start over.</div>';
+                    return;
+                }
+
                 const currentReel = allReels[currentIndex];
                 const currentVideoElement = await createVideoElement(currentReel, currentIndex);
                 container.appendChild(currentVideoElement);
 
-                // Preload next reel
                 const nextIndex = getRandomReel(currentIndex);
-                const nextReel = allReels[nextIndex];
-                const nextVideoElement = await createVideoElement(nextReel, nextIndex, true);
-                container.appendChild(nextVideoElement);
+                if (nextIndex !== -1) {
+                    const nextReel = allReels[nextIndex];
+                    const nextVideoElement = await createVideoElement(nextReel, nextIndex, true);
+                    container.appendChild(nextVideoElement);
+                }
             }
 
             function enableScrollPlayback() {
                 let currentVideo = null;
                 let lastScrollTop = 0;
 
-                // Improvement 3: Swipe Gestures
                 container.addEventListener('touchstart', (e) => {
                     touchStartY = e.touches[0].clientY;
                 });
@@ -375,7 +394,7 @@
                 container.addEventListener('touchend', (e) => {
                     const touchEndY = e.changedTouches[0].clientY;
                     const swipeDistance = touchStartY - touchEndY;
-                    if (swipeDistance > 50) { // Swipe up
+                    if (swipeDistance > 50) {
                         currentIndex = getRandomReel(currentIndex);
                         viewedReels.push(currentIndex);
                         loadCurrentReel();
@@ -424,9 +443,10 @@
                                 window.history.pushState({}, document.title, `/Instagram/?reelId=${reel.reelId}`);
                             }
 
-                            video.play().catch(error => showError('Playback failed', entry.target));
+                            video.currentTime = 0; // Reset to start
+                            video.play().catch(() => {});
                             if (progressBar) progressBar.style.display = 'block';
-                        } else if (video !== currentVideo) {
+                        } else {
                             video.pause();
                             if (loader) loader.style.display = 'none';
                             if (progressBar) progressBar.style.display = 'none';
@@ -457,7 +477,6 @@
                 }, 500);
             }
 
-            // Improvement 1: Error Display Function
             function showError(message, container = null) {
                 const target = container || document.body;
                 const errorDiv = target.querySelector('.error-message');
@@ -468,6 +487,14 @@
                         errorDiv.style.display = 'none';
                     }, 3000);
                 }
+            }
+
+            function refreshReels() {
+                viewedReels = [];
+                loadedVideos.clear();
+                currentIndex = getRandomReel(-1);
+                viewedReels.push(currentIndex);
+                loadCurrentReel();
             }
 
             loadCurrentReel().then(() => enableScrollPlayback());
